# uploadsvc-flask

./: Dockerfile  README.md  compose.yaml  push_image.sh  pyproject.toml  run.sh  run_app.sh
src/uploadsvc/: __init__.py
src/uploadsvc/templates/: header.html  list_files.html  login.html  upload.html
